2011-07-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs-gnu.el (debbugs-mode-map): Bind `q' to `bury-buffer',
	which seems more useful.

2011-07-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* debbugs-gnu.el (debbugs-gnu): New group.
	(widget-mouse-face, gnus-posting-styles): Declare.
	(debbugs-suppress-done): Avoid beginning-of-buffer.

2011-07-06  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs-gnu.el (debbugs-toggle-sort): Sort the tagged bugs at
	the end.
	(debbugs-emacs): Init the saved bugs on call, not on load.
	(debbugs-dump-persistency-file): Don't destroy the list while
	saving it.

2011-07-05  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-owner): Remove.  We use `debbugs-tagged'
	uniquely.
	(debbugs-widgets, debbugs-package, debbugs-severities)
	(debbugs-archive): New defvars.
	(debbugs-local-tags, debbugs-persistency-file)
	(debbugs-dump-persistency-file): Add docstring.
	(debbugs-emacs): Use new defvars.
	(debbugs-show-reports):  Remove widgets from arguments.  Mark bugs
	submitted by user.
	(debbugs-mode-map): Add "x" (for purge "done" bugs).
	(debbugs-rescan): On the last page, check also for new arrived bugs.
	(debbugs-suppress-done): New defun.

2011-07-04  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-tagged): New face.
	(debbugs-persistency-file): New defvar.  Read and eval its
	contents during loading.
	(debbugs-dump-persistency-file): New defun.  Add it to
	`kill-emacs-hook'.
	(debbugs-local-tags): New defvar.
	(debbugs-show-reports): Code cleanup.  Show tagged bugs.
	(debbugs-mode-map): Add "t" (for toggle tag) and "C" (for send
	control message).
	(debbugs-toggle-tag): New defun.
	(debbugs-display-status): Remove superfluous let-binding.
	(debbugs-send-control-message): Read id also via `debbugs-current-id'.

2011-07-04  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs-gnu.el (debbugs-select-report): Fetch all merged
	reports.
